maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:69: error: value =- is not a member of Int
		T(i)=-1;
                    ^